--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ button {
 }
 
 .header-nav-link {
-    display: block;
+  display: block;
   color: var(--main-text-color);
   font-size: 14px;
   padding: 28px 0;
@@ -63,7 +63,6 @@ button {
 .header-container {
   display: flex;
   align-items: center;
-
 }
 
 .header-nav-link:hover,
@@ -85,5 +84,47 @@ button {
 }
 
 .header-logo {
-    margin-right: auto;
+  margin-right: auto;
+}
+
+.hero {
+  padding: 14px 0 69px;
+}
+
+.hero-title {
+  margin-bottom: 28px;
+  max-width: 502px;
+  color: var(--main-text-color);
+  font-size: 48px;
+  line-height: 1.2;
+}
+
+.hero-text {
+  margin-bottom: 40px;
+  max-width: 511px;
+  color: var(--main-text-color);
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.hero-btn {
+  padding: 6px 18px;
+  color: var(--main-text-color);
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 1.5;
+  border-radius: 30px;
+  background-color: var(--green);
+}
+
+.hero-img {
+  border-radius: 291px;
+  border: 26px solid var(--yellow);
+}
+
+.hero-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
 }
