--- a/css/styles.css
+++ b/css/styles.css
@@ -301,4 +301,21 @@ background-repeat: no-repeat;
 width: 35px;
 height: 35px;
 }
-
+.swiper {
+  width: 1300px;
+  height: 400px;
+}
+.swiper-wrapper {
+  display: flex;
+  gap: 30px;
+}
+.swiper-pagination-bullet {
+border-radius: 16px;
+background: #EFEFEF;
+width: 16px;
+height: 16px;
+opacity: 1;
+}
+.swiper-pagination-bullet-active {
+  background: #02897A;
+}
